# SemanticReleasePoC

./: .pre-commit-config.yaml  CHANGELOG.md  Pipfile  README.md  pyproject.toml
my_app/: __init__.py
tests/: test_base.py
