[build-system]
requires = ["setuptools ~= 68.2.0", "wheel ~= 0.41.2", "setuptools-pipfile ~= 0.7.0"]
build-backend = "setuptools.build_meta"


[project]
name = "my_app"
authors = [
    {name = "Ezequiel L. Castaño", email = "castanoezequielleonardo@gmail.com"},
]
description = "A dummy app to test semantic releases"
readme = "README.md"
dynamic = ['version']

[tool.setuptools-pipfile]

[tool.semantic_release]
branch = "main"
commit_message = "chore(release): v{version}"
commit_parser = "angular"
logging_use_named_masks = false
version_variable = ["my_app/__init__.py:__version__"]
version_source = "commit"
tag_format = "v{version}"

[tool.semantic_release.branches.main]
match = "(main|master)"
prerelease_token = "rc"
prerelease = false

[tool.semantic_release.changelog]
changelog_file = "CHANGELOG.md"

[tool.semantic_release.commit_parser_options]
allowed_tags = ["build", "chore", "ci", "docs", "feat", "fix", "perf", "style", "refactor", "test"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]
