[build-system]
requires = ["setuptools ~= 68.2.0", "wheel ~= 0.41.2", "setuptools-pipfile ~= 0.7.0"]
build-backend = "setuptools.build_meta"


[project]
name = "my_app"
authors = [
    {name = "Ezequiel L. Castaño", email = "castanoezequielleonardo@gmail.com"},
]
description = "A dummy app to test semantic releases"
readme = "README.md"
dynamic = ['version']

[tool.setuptools-pipfile]

[tool.semantic_release]
commit_message = "chore(release): bump version and update changelog [skip ci]"
version_source = "tag"
version_variables = [
    "my_app/__init__.py:__version__",
]

[tool.semantic_release.changelog]
changelog_file = "CHANGELOG.md"
exclude_commit_patterns = [
    "chore*"
]

[tool.semantic_release.commit_parser_options]
allowed_tags = ["build", "chore", "ci", "docs", "feat", "fix", "perf", "style", "refactor", "test"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]
